# ysc-binja

./: .clang-format  .gitignore  CMakeLists.txt  README.md  RageScriptArch.py  RageScriptCallingConvention.py  RageScriptDisasm.py  RageScriptIL.py  RageScriptView.py
cmake/: binja.cmake  fmt.cmake  json.cmake
python/: RageScriptIL.py  RageScriptView.py  RageUtil.py  __init__.py
src/: CMakeLists.txt  Uint24.hpp  inc.hpp  main.cpp
src/Architecture/: InsnConstructor.cpp  YSCArchitecture.cpp  YSCArchitecture.hpp
src/CallingConvention/: CallingConvention.cpp  CallingConvention.hpp
src/Instructions/: OperandTypes.hpp  OperationBase.cpp  OperationBase.hpp  OperationEnum.hpp
src/Instructions/SubOperations/: OpArray.hpp  OpArrayLoad.hpp  OpArrayStore.hpp  OpArrayU16.cpp  OpArrayU16.hpp  OpArrayU16Load.cpp  OpArrayU16Load.hpp  OpArrayU16Store.cpp  OpArrayU16Store.hpp  OpArrayU8.cpp  OpArrayU8.hpp  OpArrayU8Load.cpp  OpArrayU8Load.hpp  OpArrayU8Store.cpp  OpArrayU8Store.hpp  OpCall.cpp  OpCall.hpp  OpCallindirect.cpp  OpCallindirect.hpp  OpCatch.cpp  OpCatch.hpp  OpDrop.cpp  OpDrop.hpp  OpDup.cpp  OpDup.hpp  OpEnter.cpp  OpEnter.hpp  OpF2I.cpp  OpF2I.hpp  OpF2V.cpp  OpF2V.hpp  OpFadd.cpp  OpFadd.hpp  OpFdiv.cpp  OpFdiv.hpp  OpFeq.cpp  OpFeq.hpp  OpFge.cpp  OpFge.hpp  OpFgt.cpp  (+207 more)
src/View/: Crossmap.cpp  Crossmap.hpp  YSCView.cpp  YSCView.hpp
